<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/city"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/city" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingTop="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/city"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="23sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:paddingStart="28dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        tools:ignore="NestedWeights"
                        app:drawableStartCompat="@drawable/home" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        app:drawableStartCompat="@drawable/about" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contact"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        app:drawableLeftCompat="@drawable/contact" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/college"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/college" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingTop="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/college"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="23sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:paddingStart="28dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        tools:ignore="NestedWeights"
                        app:drawableStartCompat="@drawable/home" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        app:drawableStartCompat="@drawable/about" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contact"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        app:drawableLeftCompat="@drawable/contact" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/university"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/university" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingTop="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/university"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="23sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:paddingStart="28dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        tools:ignore="NestedWeights"
                        app:drawableStartCompat="@drawable/home" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        app:drawableStartCompat="@drawable/about" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contact"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        app:drawableLeftCompat="@drawable/contact" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/museum"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/museum" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingTop="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/museum"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="23sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:paddingStart="28dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        tools:ignore="NestedWeights"
                        app:drawableStartCompat="@drawable/home" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        app:drawableStartCompat="@drawable/about" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contact"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:drawablePadding="7dp"
                        app:drawableLeftCompat="@drawable/contact" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>